Add encryption and NFC

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,18 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_smsencrypt">Secure Sms</string>
+    <string name="findContact">Find </string>
+    <string name="title_activity_write_password">Secure Sms</string>
+    <string name="error_detected">Error Detected</string>
+    <string name="ok_writing">writing .......</string>
+    <string name="error_writing">Error during writing</string>
+    <string name="ok.detection">OK</string>
+    <string-array name="derivation_methods">
+        <item>Padding key derivation</item>
+        <item>SHA1PRNG key derivation</item>
+        <item>PBKDF2 key derivation</item>
+        <item>PKCS#12 key derivation</item>
+ </string-array>
+    
 
 </resources>
